--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Import Swiper styles */
+@import "swiper/css/bundle";
+
 :root {
   font-size: 10px;
   overflow-x: hidden;
@@ -10,4 +13,17 @@
 body {
   background: #0b0d17;
   color: white;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center;
 }
