--- a/app/globals.css
+++ b/app/globals.css
@@ -20,10 +20,15 @@ body {
   height: 100%;
 }
 
+.swiper-slide {
+  display: flex;
+}
+
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: auto;
-  object-fit: cover;
+  aspect-ratio: 3/2;
+  object-fit: contain;
   object-position: center;
+  user-select: none;
 }
